--- a/QubesBuilder.html
+++ b/QubesBuilder.html
@@ -58,7 +58,7 @@ make iso </code></pre>
 <h3 id="Manualsourcemodification">Manual source modification</h3>
 <p>If you want to somehow modify sources, you can also do it, here are some basic steps:</p>
 <ol>
-<li>Download qubes-builder as described above</li>
+<li>Download qubes-builder as described above (if you want to use marmarek's branches, you should also download qubes-builder from his repo - replace 'joanna' with 'marmarek' in above git clone command)</li>
 <li>Edit builder.conf (still the same as above), some useful additions:
 <ul>
 <li><p>As time of writing this, the default is fc15, but latest supported is fc17, so switch to newer one</p>
