--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -1,16 +1,16 @@
-<h1 id="InstallationGuideforQubes1.0rc1">Installation Guide (for Qubes 1.0 rc1)</h1>
+<h1 id="InstallationGuideforQubes1.0">Installation Guide (for Qubes 1.0)</h1>
 <h2 id="HardwareRequirements">Hardware Requirements</h2>
 <p>Please see the <a href="/wiki/wiki/HCL">Hardware Compatibility List</a> page for more information on required and recommended hardware.</p>
 <h2 id="DownloadinstallerISO">Download installer ISO</h2>
 <p>You can download the ISO and the digital signature for the ISO from here:</p>
 <p><strong>Note:</strong> Be sure that you use a modern, non-handicapped browser to access the links below (e.g. disable the NoScript and the likes extensions that try to turn your Web Browser essentially into the 90's Mosaic).</p>
 <ul>
-<li><a href="http://qubes-os.s3.amazonaws.com/iso/Qubes-R1-rc1-x86_64-DVD.iso">​http://qubes-os.s3.amazonaws.com/iso/Qubes-R1-rc1-x86_64-DVD.iso</a></li>
-<li><a href="http://qubes-os.s3.amazonaws.com/iso/Qubes-R1-rc1-x86_64-DVD.iso.asc">​http://qubes-os.s3.amazonaws.com/iso/Qubes-R1-rc1-x86_64-DVD.iso.asc</a></li>
+<li><a href="http://qubes-os.s3.amazonaws.com/iso/Qubes-R1-x86_64-DVD.iso">​http://qubes-os.s3.amazonaws.com/iso/Qubes-R1-x86_64-DVD.iso</a></li>
+<li><a href="http://qubes-os.s3.amazonaws.com/iso/Qubes-R1-x86_64-DVD.iso.asc">​http://qubes-os.s3.amazonaws.com/iso/Qubes-R1-x86_64-DVD.iso.asc</a></li>
 </ul>
 <p>... or you might try to download the ISO via bit torrent:</p>
 <ul>
-<li><a href="http://qubes-os.s3.amazonaws.com/iso/Qubes-R1-rc1-x86_64-DVD.iso?torrent">​http://qubes-os.s3.amazonaws.com/iso/Qubes-R1-rc1-x86_64-DVD.iso?torrent</a></li>
+<li><a href="http://qubes-os.s3.amazonaws.com/iso/Qubes-R1-x86_64-DVD.iso?torrent">​http://qubes-os.s3.amazonaws.com/iso/Qubes-R1-x86_64-DVD.iso?torrent</a></li>
 </ul>
 <p>See this <a href="/wiki/wiki/VerifyingSignatures">page</a> for more info about how to download and verify our GPG keys. Then, verify the downloaded ISO:</p>
 <pre class="wiki"><code>gpg -v &lt;iso&gt;.asc</code></pre>
@@ -22,6 +22,8 @@
 <p>Before proceeding with the installation, you are encouraged to first read all the information on this page, especially the <em>Known Issues</em> paragraph.</p>
 <p>Then, when finally ready, boot your system from the installer DVD and follow the instructions on screen. The installer is very simple and asks very few questions -- it's actually easier to install Qubes right now than most other Linux distributions!</p>
 <p>The installer loads Xen right at the beginning, so chances are high that if you can see the installer's graphical screen, Qubes will work on your system :)</p>
+<h2 id="UpgradingfromQubes1.0-rc1">Upgrading from Qubes 1.0-rc1</h2>
+<p>If you're already running Qubes 1.0-rc1, you don't need to reinstall, it's just enough to update the packages in your Dom0 and the template VM(s). The easiest way for doing this is to click on the Update Button in the Qubes Manger -- one click when you selected Dom0, and one click for each of your template VM (by default there is just one template).</p>
 <h2 id="MigratingfromQubesBeta3">Migrating from Qubes Beta 3</h2>
 <p>If you have Qubes Beta 3 currently installed on your system, you must reinstall from scratch, as we offer no direct upgrade option in the installer (sorry). However, we do offer tools for smooth migration of your AppVMs. In order to do that, please backup your AppVMs using the <code></code><code>qvm-backup</code><code></code> tool <a href="/wiki/wiki/BackupRestore">as usual</a>. Then, after you install Qubes 1.0 rc1, you can restore them using <code></code><code>qvm-backup-restore</code><code></code> tool. However, because we have changed the default template in RC1, you should tell qvm-back-restore about that by passing <code></code><code>--replace-template</code><code></code> option:</p>
 <pre class="wiki"><code>qvm-backup-restore &lt;backup_dir&gt; --replace-template=fedora-15-x64:fedora-17-x64 </code></pre>
