--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -1,6 +1,7 @@
 <h1 id="InstallationGuideforQubes1.0">Installation Guide (for Qubes 1.0)</h1>
 <h2 id="HardwareRequirements">Hardware Requirements</h2>
 <p>Please see the <a href="/wiki/wiki/HCL">Hardware Compatibility List</a> page for more information on required and recommended hardware.</p>
+<p>Note: We don't recommend installing Qubes in a virtual machine! It will likely not work. Don't send emails asking about it.</p>
 <h2 id="DownloadinstallerISO">Download installer ISO</h2>
 <p>You can download the ISO and the digital signature from the SF.net:</p>
 <ul>
