--- a/HCL.html
+++ b/HCL.html
@@ -35,6 +35,7 @@
 <li>Sony Vaio Z2 (2011 edition) works fine but requires some BIOS mod to enable VT-d. Reported by <a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">​Danny Fullerton</a>.</li>
 <li>Lenovo Thinkpad W510 with core I7 Q820, with proprietary Nvidia driver works fine. Reported by <a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">​Sebastian Hültenschmidt</a>.</li>
 <li>Lenovo Thinkpad x220 8GB RAM, Intel graphics (core i5), VT-d is working. Reported by <a href="https://groups.google.com/group/qubes-devel/msg/f41578eef913446a">​Stefan Boresch</a></li>
+<li>Dell Latitude 5520, requires some minor fixes for networking to work. Reported by <a href="https://groups.google.com/group/qubes-devel/msg/7418e7084c2de99f?hl=en">​Erik Edin</a>.</li>
 <li>Dell Latitude E6520 with i7-2760QM CPU. VT-d works fine. nVidia graphics not working, but integrated Intel does. Reported by <a href="https://groups.google.com/group/qubes-devel/msg/340afc6fc2d06d0e">​Steven Collins</a></li>
 <li>Dell <a href="/wiki/wiki/PowerEdge">PowerEdge?</a> T110 II, onboard Matrox graphics (Intel Xeon E3-1230), VT-d is working. Reported by <a href="https://groups.google.com/group/qubes-devel/msg/8a894915909eeaee">​Geoff</a></li>
 <li>Toshiba Tecra S11. Requires <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/fdec0ec165a87726">​some tinkering</a> to enable 3G modem. Reported by Jan Beerden</li>
