--- a/SecurityBulletins.html
+++ b/SecurityBulletins.html
@@ -10,4 +10,5 @@
 <h2 id="a2012">2012</h2>
 <ul>
 <li><a href="https://groups.google.com/d/msg/qubes-devel/JIpZoQUP6dQ/g6TvtpUHzBQJ">​Qubes Security Bulletin #2</a></li>
+<li><a href="https://groups.google.com/group/qubes-devel/msg/2dece13ed1f9ad2d">​Qubes Security Bulletin #3</a></li>
 </ul>
