--- a/HCL.html
+++ b/HCL.html
@@ -40,6 +40,7 @@
 <li>Dell <a href="/wiki/wiki/PowerEdge">PowerEdge?</a> T110 II, onboard Matrox graphics (Intel Xeon E3-1230), VT-d is working. Reported by <a href="https://groups.google.com/group/qubes-devel/msg/8a894915909eeaee">​Geoff</a></li>
 <li>Toshiba Tecra S11. Requires <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/fdec0ec165a87726">​some tinkering</a> to enable 3G modem. Reported by Jan Beerden</li>
 <li>Toshiba M780 S7240, requires latest BIOS to have VT-d working, <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/2b89d2dc5f999ab7">​some problems</a> with card reader. Reported by <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/66e97c990a08d8e2">​Franz</a></li>
+<li>Dell Precision M4600 Intel Core i7-2860QM, 16GB ram, NVIDIA Quadro 1000M, EMEA Intel Pro Wireless 6300. Reported by <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/ddf35d12a35f96a3">​nqe</a></li>
 </ul>
 <h2 id="SpecificsystemsknowntonotworkwellwithQubes">Specific systems known to not work well with Qubes</h2>
 <ul>
