--- a/StickMounting.html
+++ b/StickMounting.html
@@ -12,7 +12,7 @@
 </blockquote>
 <blockquote>
 <p>NOTE: If your device is not listed here, you can refresh the list calling (from VM to which device is connected):</p>
-<pre class="wiki"><code>sudo udevadm trigger</code></pre>
+<pre class="wiki"><code>sudo udevadm trigger --action=change</code></pre>
 </blockquote>
 <ol start="3">
 <li><p>Connect the device, e.g.:</p>
