--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -10,7 +10,7 @@
 <p>... or you might try one of the following mirrors:</p>
 <ul>
 <li><a href="http://ftp.fsn.hu/pub/linux/distributions/qubes/">​http://ftp.fsn.hu/pub/linux/distributions/qubes/</a></li>
-<li><a href="http://linuxtracker.org/index.php?page=torrent-details&amp;id=3bdf893771d63bdbe3d83f31e064360ee10f30ec">​http://linuxtracker.org/index.php?page=torrent-details&amp;id=3bdf893771d63bdbe3d83f31e064360ee10f30ec</a> (torrent)</li>
+<li><del><a href="http://linuxtracker.org/index.php?page=torrent-details&amp;id=3bdf893771d63bdbe3d83f31e064360ee10f30ec">​http://linuxtracker.org/index.php?page=torrent-details&amp;id=3bdf893771d63bdbe3d83f31e064360ee10f30ec</a> (torrent)</del> linuxtracker.org have some problems (php errors instead of page, tracker is down)</li>
 </ul>
 <p>Remember, we have absolutely no control over those servers, and so you should be assuming that they might be compromised, or just be serving a compromised ISOs because their operators decided so for whatever reason. Always verify the digital signature on the downloaded ISO. See this <a href="/wiki/wiki/VerifyingSignatures">page</a> for more info about how to download and verify our GPG keys, and then verify the downloaded ISO:</p>
 <pre class="wiki"><code>gpg -v &lt;iso&gt;.asc</code></pre>
