--- a/UserDoc.html
+++ b/UserDoc.html
@@ -31,4 +31,6 @@
 <li><a href="/wiki/wiki/InstallNvidiaDriver">How to install Nvidia driver in dom0</a></li>
 <li><a href="/wiki/wiki/SonyVaioTinkering">Getting Sony Vaio Z laptop to work with Qubes</a></li>
 <li><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/5a0dfc38fd1cc16a">​How to get composition working on ATI GPUs</a></li>
+<li><a href="https://groups.google.com/group/qubes-devel/msg/4ca950ab6d7cd11a">​How to make proxy for individual tcp connection from networkless VM</a></li>
+<li><a href="https://groups.google.com/group/qubes-devel/msg/34f67194d3422bfa">​How to run TorBrowser using external tor proxy (from TorVM)</a></li>
 </ul>
