--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -40,6 +40,9 @@
 <li><a href="/wiki/wiki/QubesBuilder">Building Qubes</a></li>
 </ul>
 <ul>
+<li><a href="/wiki/wiki/Development">Workflow?</a></li>
+</ul>
+<ul>
 <li><a href="/wiki/wiki/KdeDom0">KDE Dom0 packages for Qubes</a></li>
 </ul>
 <ul>
