--- a/DevelopmentWorkflow.html
+++ b/DevelopmentWorkflow.html
@@ -9,3 +9,37 @@
 $ git remote add abel git@github.com:abeluck/qubes-core.git</code></pre>
 <p>You can then proceed to easily develop in your own branches, pull in new commits from the dev branches, merge them, and eventually push to your own repo on github.</p>
 <p>When you are ready to submit your changes to Qubes to be merged, push your changes, then create a signed git tag (using <code>git tag -s</code>). Finally, send a letter to the Qubes listserv describing the changes and including the link to your repository. Don't forget to include your public PGP key you use to sign your tags.</p>
+<h2 id="CopyingCodetodom0">Copying Code to dom0</h2>
+<p>When developing it is convenient to be able to rapidly test changes. Assuming you're developing Qubes on Qubes, you should be working in a special VM for Qubes and occasionally you will want to transfer code or rpms back to dom0 for testing.</p>
+<p>Here are some handy scripts Marek has shared to facilitate this.</p>
+<h3 id="Syncingdom0files">Syncing dom0 files</h3>
+<p>TODO: edit this script to be more generic</p>
+<pre class="wiki"><code>#!/bin/sh
+
+set -x
+set -e
+
+QUBES_PY_DIR=/usr/lib64/python2.6/site-packages/qubes
+QUBES_PY=$QUBES_PY_DIR/qubes.py
+QUBESUTILS_PY=$QUBES_PY_DIR/qubesutils.py
+
+qvm-run -p qubes-devel &#39;cd qubes-builder/qubes-src/core/dom0; tar c qmemman/qmemman*.py qvm-core/*.py qvm-tools/* misc/vm-template-hvm.conf misc/qubes-start.desktop ../misc/block-snapshot aux-tools ../qrexec&#39; |tar xv
+cp $QUBES_PY qubes.py.bak$$
+cp $QUBESUTILS_PY qubesutils.py.bak$$
+cp /etc/xen/scripts/block-snapshot block-snapshot.bak$$
+sudo cp qvm-core/qubes.py $QUBES_PY
+sudo cp qvm-core/qubesutils.py $QUBESUTILS_PY
+sudo cp qvm-core/guihelpers.py $QUBES_PY_DIR/
+sudo cp qmemman/qmemman*.py $QUBES_PY_DIR/
+sudo cp misc/vm-template-hvm.conf /usr/share/qubes/
+sudo cp misc/qubes-start.desktop /usr/share/qubes/
+sudo cp misc/block-snapshot /etc/xen/scripts/
+sudo cp aux-tools/qubes-dom0-updates.cron /etc/cron.daily/I hope to </code></pre>
+<h3 id="Applyqvm-tools">Apply qvm-tools</h3>
+<p>TODO: make it more generic</p>
+<pre class="wiki"><code>#!/bin/sh
+
+BAK=qvm-tools.bak$$
+mkdir -p $BAK
+cp -a /usr/bin/qvm-* /usr/bin/qubes-* $BAK/
+sudo cp qvm-tools/qvm-* qvm-tools/qubes-* /usr/bin/</code></pre>
