--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -40,7 +40,7 @@
 <li><a href="/wiki/wiki/QubesBuilder">Building Qubes</a></li>
 </ul>
 <ul>
-<li><a href="/wiki/wiki/Development">Workflow?</a></li>
+<li><a href="/wiki/wiki/DevelopmentWorkflow">Development Workflow</a></li>
 </ul>
 <ul>
 <li><a href="/wiki/wiki/KdeDom0">KDE Dom0 packages for Qubes</a></li>
