--- a/HCL.html
+++ b/HCL.html
@@ -41,6 +41,7 @@
 <li>Toshiba Tecra S11. Requires <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/fdec0ec165a87726">​some tinkering</a> to enable 3G modem. Reported by Jan Beerden</li>
 <li>Toshiba M780 S7240, requires latest BIOS to have VT-d working, <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/2b89d2dc5f999ab7">​some problems</a> with card reader. Reported by <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/66e97c990a08d8e2">​Franz</a></li>
 <li>Dell Precision M4600 Intel Core i7-2860QM, 16GB ram, NVIDIA Quadro 1000M, EMEA Intel Pro Wireless 6300. Reported by <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/ddf35d12a35f96a3">​nqe</a></li>
+<li>Tecra A11-15X: RAM 8GB CPU I7 M620 2.67 ghz. Reported by <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/c0d5f6a33d672b62">​PirBoazo</a></li>
 </ul>
 <h2 id="SpecificsystemsknowntonotworkwellwithQubes">Specific systems known to not work well with Qubes</h2>
 <ul>
