--- a/DevelopmentWorkflow.html
+++ b/DevelopmentWorkflow.html
@@ -1,6 +1,6 @@
 <h1 id="DevelopmentWorkflow">Development Workflow</h1>
 <p>A workflow for developing Qubes OS+</p>
-<p>First things first, setup <a href="/wiki/wiki/Qubes">Builder?</a>. This guide assumes you're using qubes-builder to build Qubes.</p>
+<p>First things first, setup <a href="/wiki/wiki/QubesBuilder">QubesBuilder</a>. This guide assumes you're using qubes-builder to build Qubes.</p>
 <h2 id="RepositoriesandCommittingCode">Repositories and Committing Code</h2>
 <p>Qubes is split into a bunch of git repos. This are all contained in the <code>qubes-src</code> directory under qubes-builder.</p>
 <p>The best way to write and contribute code is to create a git repo somewhere (e.g., github) for the repo you are interested in editing (e.g., <code>qubes-manager</code>, <code>core</code>, etc). To integrate your repo with the rest of Qubes, cd to the repo directory and add your repository as a remote in git</p>
