--- a/UserDoc.html
+++ b/UserDoc.html
@@ -20,6 +20,7 @@
 <li><a href="https://groups.google.com/group/qubes-devel/msg/9d1ac581236ca9b4">​Extend root.img size</a></li>
 <li>Installing <a href="/wiki/wiki/AntiEvilMaid">Anti Evil Maid</a></li>
 <li><a href="/wiki/wiki/UserDoc/TorVM">Tor proxy VM</a> documentation</li>
+<li><a href="/wiki/wiki/UserDoc/XFCE">XFCE</a> installation in dom0</li>
 </ul>
 <p>Command-line tools reference:</p>
 <ul>
