UserDoc/XFCE changed
typo

--- a/UserDoc/XFCE.html
+++ b/UserDoc/XFCE.html
@@ -36,6 +36,6 @@
         &lt;Filename&gt;untrusted-firefox.desktop&lt;/Filename&gt;
     &lt;/Include&gt;
 &lt;/Menu&gt;</code></pre></li>
-<li>add it to the pannel: right click on panel, &quot;add new items&quot;, select &quot;XFCE menu&quot;, choose custom menu file - just created one</li>
+<li>add it to the panel: right click on panel, &quot;add new items&quot;, select &quot;XFCE menu&quot;, choose custom menu file - just created one</li>
 </ol></li>
 </ul>
