--- a/UserDoc.html
+++ b/UserDoc.html
@@ -34,4 +34,5 @@
 <li><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/5a0dfc38fd1cc16a">​How to get composition working on ATI GPUs</a></li>
 <li><a href="https://groups.google.com/group/qubes-devel/msg/4ca950ab6d7cd11a">​How to make proxy for individual tcp connection from networkless VM</a></li>
 <li><a href="https://groups.google.com/group/qubes-devel/msg/34f67194d3422bfa">​How to run TorBrowser using external tor proxy (from TorVM)</a></li>
+<li><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/9df22b8a0719d047">​Creating NetBSD VM</a></li>
 </ul>
