--- a/UserDoc.html
+++ b/UserDoc.html
@@ -35,4 +35,5 @@
 <li><a href="https://groups.google.com/group/qubes-devel/msg/4ca950ab6d7cd11a">​How to make proxy for individual tcp connection from networkless VM</a></li>
 <li><a href="https://groups.google.com/group/qubes-devel/msg/34f67194d3422bfa">​How to run TorBrowser using external tor proxy (from TorVM)</a></li>
 <li><a href="https://groups.google.com/group/qubes-devel/msg/4015c8900a813985">​Creating NetBSD VM</a></li>
+<li><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/e4ac093cabd37d2b/d5090c20d92c4128#d5090c20d92c4128">​Booting with GRUB2 and GPT</a></li>
 </ul>
