--- a/UserDoc.html
+++ b/UserDoc.html
@@ -21,6 +21,7 @@
 <li>Installing <a href="/wiki/wiki/AntiEvilMaid">Anti Evil Maid</a></li>
 <li><a href="/wiki/wiki/UserDoc/TorVM">Tor proxy VM</a> documentation</li>
 <li><a href="/wiki/wiki/UserDoc/XFCE">XFCE</a> installation in dom0</li>
+<li><a href="/wiki/wiki/UserDoc/DispVMCustomization">DispVM Customization</a></li>
 </ul>
 <p>Command-line tools reference:</p>
 <ul>
