--- a/UserDoc.html
+++ b/UserDoc.html
@@ -1,6 +1,7 @@
 <h1 id="QubesUserGuides">Qubes User Guides</h1>
 <ul>
 <li><a href="/wiki/wiki/GettingStarted">Getting started</a></li>
+<li><a href="/wiki/wiki/HvmCreate">Creating and using HVM domains (in Qubes 2)</a></li>
 <li><a href="/wiki/wiki/CopyPaste">Copy and paste between domains</a></li>
 <li><a href="/wiki/wiki/CopyingFiles">Copying files between domains</a></li>
 <li><a href="/wiki/wiki/SoftwareUpdateVM">Updating and adding new software to domains</a></li>
