--- a/WikiStart.html
+++ b/WikiStart.html
@@ -23,6 +23,10 @@
 </ul>
 <h2 id="Contacts">Contacts</h2>
 <p><em>Note: Please send all the questions regarding Qubes to the mailing list (see below)</em></p>
+<h3 id="SecurityContact">Security Contact</h3>
+<ul>
+<li><a href="/wiki/wiki/SecurityTeam">Qubes Security Team?</a></li>
+</ul>
 <h3 id="Mailinglist">Mailing list</h3>
 <ul>
 <li>The group's email address: <code>qubes-devel@googlegroups.com</code></li>
