--- a/WikiStart.html
+++ b/WikiStart.html
@@ -25,7 +25,7 @@
 <p><em>Note: Please send all the questions regarding Qubes to the mailing list (see below)</em></p>
 <h3 id="SecurityContact">Security Contact</h3>
 <ul>
-<li><a href="/wiki/wiki/SecurityTeam">Qubes Security Team?</a></li>
+<li><a href="/wiki/wiki/SecurityPage">Reporting Security Issues in Qubes OS</a></li>
 </ul>
 <h3 id="Mailinglist">Mailing list</h3>
 <ul>
