--- a/WikiStart.html
+++ b/WikiStart.html
@@ -51,6 +51,13 @@
 <ul>
 <li>Agnieszka Kostrzewa &lt;a.kostrzewa at alx dot pl&gt; - qubes-manager, docs</li>
 </ul>
+<ul>
+<li>Abel Luck &lt;abel at outcomedubious dot im&gt; - torvm</li>
+</ul>
+<p></p>
+<ul>
+<li>Alexandre Bezroutchko &lt;abb at gremwell dot com&gt; - pvusb support</li>
+</ul>
 <h3 id="Presscontact">Press contact</h3>
 <ul>
 <li>Joanna Rutkowska &lt;joanna at invisiblethingslab.com&gt;</li>
