--- a/WikiStart.html
+++ b/WikiStart.html
@@ -42,7 +42,7 @@
 <li>Rafal Wojtczuk &lt;rafal at invisiblethingslab dot com&gt; - architecture &amp; system-level stuff</li>
 </ul>
 <ul>
-<li>Marek Marczykowski &lt;marmarek at mimuw dot edu dot pl&gt; - core, and pretty much everything these days :)</li>
+<li>Marek Marczykowski &lt;marmarek at invisiblethingslab dot com&gt; - core, and pretty much everything these days :)</li>
 </ul>
 <h3 id="Contributors">Contributors</h3>
 <ul>
