--- a/WikiStart.html
+++ b/WikiStart.html
@@ -1,12 +1,20 @@
 <h1 id="WelcometotheQubesWiki">Welcome to the Qubes Wiki</h1>
+<p>Qubes is an open source operating system designed to provide strong security for desktop computing. Qubes is based on Xen, X Window System, and Linux, and can run most Linux applications and utilize most of the Linux drivers. Qubes <strong>Release 1</strong> has been released in September 2012. Qubes <strong>Release 2</strong> is currently in the works, and the Beta 1 is scheduled to be released in the coming weeks. Qubes 2 will also support Windows-based AppVMs.</p>
+<ul>
+<li><a href="/wiki/wiki/QubesScreenshots">Screenshots</a></li>
+<li><a href="/wiki/wiki/QubesArchitecture">Architecture Overview</a></li>
+<li><a href="/wiki/wiki/SecurityGoals">Qubes Security Goals</a></li>
+</ul>
+<h2 id="DownloadandInstallation">Download and Installation</h2>
+<ul>
+<li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
+<li><a href="/wiki/wiki/InstallationGuide">Download and Installation Guide</a></li>
+<li><a href="/wiki/wiki/VerifyingSignatures">On digital signatures and how to verify Qubes downloads</a></li>
+</ul>
+<p></p>
 <h2 id="ForUsers">For Users</h2>
 <ul>
-<li><a href="/wiki/wiki/SecurityGoals">Qubes Security Goals</a></li>
-<li><a href="/wiki/wiki/SecurityBulletins">Qubes Security Bulletins</a></li>
-<li><a href="/wiki/wiki/InstallationGuide">Installation guide</a></li>
-<li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
-<li><a href="/wiki/wiki/VerifyingSignatures">On digital signatures and how to verify Qubes downloads</a></li>
-<li><a href="/wiki/wiki/UserDoc">User Guide</a></li>
+<li><a href="/wiki/wiki/UserDoc">User's Guide</a></li>
 <li><a href="/wiki/wiki/UserFaq">FAQ</a></li>
 </ul>
 <h2 id="ForDevelopers">For Developers</h2>
@@ -21,19 +29,22 @@
 <li><a href="/wiki/wiki/DevelBooks">Books for Developers</a></li>
 <li><a href="/wiki/wiki/QubesResearch">Research papers related to Qubes</a></li>
 </ul>
-<h2 id="Contacts">Contacts</h2>
-<p><em>Note: Please send all the questions regarding Qubes to the mailing list (see below)</em></p>
-<h3 id="SecurityContact">Security Contact</h3>
+<h2 id="Security">Security</h2>
 <ul>
 <li><a href="/wiki/wiki/SecurityPage">Reporting Security Issues in Qubes OS</a></li>
+<li><a href="/wiki/wiki/SecurityBulletins">Qubes Security Bulletins</a></li>
+<li><a href="/wiki/wiki/SecurityGoals">Qubes Security Goals</a></li>
 </ul>
-<h3 id="Mailinglist">Mailing list</h3>
+<h2 id="TheMailinglist">The Mailing list</h2>
+<p><em>Note: Please send all the questions regarding Qubes to the mailing list (see below)</em></p>
 <ul>
 <li>The group's email address: <code>qubes-devel@googlegroups.com</code></li>
 <li>The Web interface: <a href="http://groups.google.com/group/qubes-devel">​http://groups.google.com/group/qubes-devel</a></li>
 </ul>
-<p>To post to a group you don't need to subscribe, just send a message to the group's email address. You can subscribe either through the web interface (but then you need to create a google account), or by sending an empty message to:</p>
+<p>To post to a group you don't need to subscribe, just send a message to the group's email address.</p>
+<p>You can subscribe either through the web interface (but then you need to create a google account), or by sending an empty message to:</p>
 <pre class="wiki"><code>qubes-devel+subscribe@googlegroups.com</code></pre>
+<h2 id="QubesDevelopers">Qubes Developers</h2>
 <h3 id="ArchitectsCoreDevelopers">Architects &amp; Core Developers</h3>
 <ul>
 <li>Joanna Rutkowska &lt;joanna at invisiblethingslab dot com&gt; - architecture &amp; project management</li>
