--- a/QubesArchitecture.html
+++ b/QubesArchitecture.html
@@ -1,7 +1,7 @@
 <h1 id="QubesArchitectureOverview">Qubes Architecture Overview</h1>
 <p>Qubes implements Security by Isolation approach. To do this, Qubes utilizes virtualization technology, to be able to isolate various programs from each other, and even sandbox many system-level components, like networking or storage subsystem, so that their compromise don’t affect the integrity of the rest of the system.</p>
 <p>Qubes lets the user define many security domains implemented as lightweight Virtual Machines (VMs), or “AppVMs”. E.g. user can have “personal”, “work”, “shopping”, “bank”, and “random” AppVMs and can use the applications from within those VMs just like if they were executing on the local machine, but at the same time they are well isolated from each other. Qubes supports secure copy-and-paste and file sharing between the AppVMs, of course.</p>
-<p><a href="http://www.qubes-os.org/Architecture_files/droppedImage.png"><img src="http://www.qubes-os.org/Architecture_files/droppedImage.png" title="http://www.qubes-os.org/Architecture_files/droppedImage.png" alt="http://www.qubes-os.org/Architecture_files/droppedImage.png" /></a></p>
+<p><a href="http://files.qubes-os.org/Architecture_files/droppedImage.png"><img src="http://files.qubes-os.org/Architecture_files/droppedImage.png" title="http://files.qubes-os.org/Architecture_files/droppedImage.png" alt="http://files.qubes-os.org/Architecture_files/droppedImage.png" /></a></p>
 <h2 id="KeyArchitecturefeatures">Key Architecture features</h2>
 <ul>
 <li>Based on a secure bare-metal hypervisor (Xen)</li>
