--- a/WikiStart.html
+++ b/WikiStart.html
@@ -73,29 +73,18 @@
 <h2 id="QubesDevelopers">Qubes Developers</h2>
 <h3 id="ArchitectsCoreDevelopers">Architects &amp; Core Developers</h3>
 <ul>
-<li>Joanna Rutkowska &lt;joanna at invisiblethingslab dot com&gt; - architecture &amp; project management</li>
-</ul>
-<ul>
-<li>Rafal Wojtczuk &lt;rafal at invisiblethingslab dot com&gt; - architecture &amp; system-level stuff</li>
-</ul>
-<ul>
-<li>Marek Marczykowski &lt;marmarek at invisiblethingslab dot com&gt; - core, and pretty much everything these days :)</li>
+<li>Joanna Rutkowska <code>joanna at invisiblethingslab dot com</code> - architecture &amp; project management</li>
+<li>Rafal Wojtczuk <code>rafal at invisiblethingslab dot com</code> - architecture &amp; system-level stuff</li>
+<li>Marek Marczykowski <code>marmarek at invisiblethingslab dot com</code> - core, and pretty much everything these days :)</li>
 </ul>
 <h3 id="Contributors">Contributors</h3>
 <ul>
-<li>Tomasz Sterna &lt;tomek at xiaoka dot com&gt; - installer &amp; gui</li>
-</ul>
-<ul>
-<li>Agnieszka Kostrzewa &lt;a.kostrzewa at alx dot pl&gt; - qubes-manager, docs</li>
-</ul>
-<ul>
-<li>Abel Luck &lt;abel at outcomedubious dot im&gt; - torvm</li>
-</ul>
-<p></p>
-<ul>
-<li>Alexandre Bezroutchko &lt;abb at gremwell dot com&gt; - pvusb support</li>
+<li>Tomasz Sterna <code>tomek at xiaoka dot com</code> - installer &amp; gui</li>
+<li>Agnieszka Kostrzewa <code>a.kostrzewa at alx dot pl</code> - qubes-manager, docs</li>
+<li>Abel Luck <code>abel at outcomedubious dot im</code> - torvm</li>
+<li>Alexandre Bezroutchko <code>abb at gremwell dot com</code> - pvusb support</li>
 </ul>
 <h3 id="Presscontact">Press contact</h3>
 <ul>
-<li>Joanna Rutkowska &lt;joanna at invisiblethingslab.com&gt;</li>
+<li>Joanna Rutkowska <code>joanna at invisiblethingslab dot com</code></li>
 </ul>
