--- a/WikiStart.html
+++ b/WikiStart.html
@@ -34,7 +34,7 @@
 <h2 id="DownloadandInstallation">Download and Installation</h2>
 <ul>
 <li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
-<li><a href="/wiki/wiki/InstallationGuide">Download and Installation Guide</a></li>
+<li><a href="/wiki/wiki/InstallationGuide">ISO Download and Installation Guide</a></li>
 <li><a href="/wiki/wiki/VerifyingSignatures">On digital signatures and how to verify Qubes downloads</a></li>
 </ul>
 <p></p>
