--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -1,2 +1,6 @@
 <h1 id="QubesDownloads">Qubes Downloads</h1>
-<p>TBA</p>
+<ul>
+<li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
+<li><a href="/wiki/wiki/InstallationGuide">ISO Download and Installation Guide</a></li>
+<li><a href="/wiki/wiki/VerifyingSignatures">On digital signatures and how to verify Qubes downloads</a></li>
+</ul>
