--- a/WikiStart.html
+++ b/WikiStart.html
@@ -6,11 +6,8 @@
 <li><a href="#ForUsers">For Users</a></li>
 <li><a href="#ForDevelopers">For Developers</a></li>
 <li><a href="#Security">Security</a></li>
-<li><a href="#TheMailinglist">The Mailing list</a></li>
-<li><a href="#QubesDevelopers">Qubes Developers</a>
+<li><a href="#TheMailinglist">The Mailing list</a>
 <ol>
-<li><a href="#ArchitectsCoreDevelopers">Architects &amp; Core Developers</a></li>
-<li><a href="#Contributors">Contributors</a></li>
 <li><a href="#Presscontact">Press contact</a></li>
 </ol></li>
 </ol>
@@ -70,20 +67,6 @@
 <p>To post to a group you don't need to subscribe, just send a message to the group's email address.</p>
 <p>You can subscribe either through the web interface (but then you need to create a google account), or by sending an empty message to:</p>
 <pre class="wiki"><code>qubes-devel+subscribe@googlegroups.com</code></pre>
-<h2 id="QubesDevelopers">Qubes Developers</h2>
-<h3 id="ArchitectsCoreDevelopers">Architects &amp; Core Developers</h3>
-<ul>
-<li>Joanna Rutkowska <code>joanna at invisiblethingslab dot com</code> - architecture &amp; project management</li>
-<li>Marek Marczykowski <code>marmarek at invisiblethingslab dot com</code> - core, and pretty much everything these days :)</li>
-</ul>
-<h3 id="Contributors">Contributors</h3>
-<ul>
-<li>Rafal Wojtczuk <code>rafal at invisiblethingslab dot com</code> - architecture &amp; system-level stuff</li>
-<li>Tomasz Sterna <code>tomek at xiaoka dot com</code> - installer &amp; gui</li>
-<li>Agnieszka Kostrzewa <code>a.kostrzewa at alx dot pl</code> - qubes-manager, docs</li>
-<li>Abel Luck <code>abel at outcomedubious dot im</code> - torvm</li>
-<li>Alexandre Bezroutchko <code>abb at gremwell dot com</code> - pvusb support</li>
-</ul>
 <h3 id="Presscontact">Press contact</h3>
 <ul>
 <li>Joanna Rutkowska <code>joanna at invisiblethingslab dot com</code></li>
