--- a/QubesLists.html
+++ b/QubesLists.html
@@ -1,2 +1,10 @@
-<h1 id="QubesContactsMailingLists">Qubes Contacts &amp; Mailing Lists</h1>
-<p>TBA</p>
+<h1 id="QubesMailingLists">Qubes Mailing Lists</h1>
+<h2 id="TheMailinglist">The Mailing list</h2>
+<p><em>Note: Please send all the questions regarding Qubes to the mailing list (see below)</em></p>
+<ul>
+<li>The group's email address: <code>qubes-devel@googlegroups.com</code></li>
+<li>The Web interface: <a href="http://groups.google.com/group/qubes-devel">​http://groups.google.com/group/qubes-devel</a></li>
+</ul>
+<p>To post to a group you don't need to subscribe, just send a message to the group's email address.</p>
+<p>You can subscribe either through the web interface (but then you need to create a google account), or by sending an empty message to:</p>
+<pre class="wiki"><code>qubes-devel+subscribe@googlegroups.com</code></pre>
