--- a/WikiStart.html
+++ b/WikiStart.html
@@ -5,8 +5,7 @@
 <li><a href="#DownloadandInstallation">Download and Installation</a></li>
 <li><a href="#ForUsers">For Users</a></li>
 <li><a href="#ForDevelopers">For Developers</a></li>
-<li><a href="#Security">Security</a></li>
-<li><a href="#TheMailinglist">The Mailing list</a>
+<li><a href="#Security">Security</a>
 <ol>
 <li><a href="#Presscontact">Press contact</a></li>
 </ol></li>
@@ -58,15 +57,6 @@
 <li><a href="/wiki/wiki/SecurityBulletins">Qubes Security Bulletins</a></li>
 <li><a href="/wiki/wiki/SecurityGoals">Qubes Security Goals</a></li>
 </ul>
-<h2 id="TheMailinglist">The Mailing list</h2>
-<p><em>Note: Please send all the questions regarding Qubes to the mailing list (see below)</em></p>
-<ul>
-<li>The group's email address: <code>qubes-devel@googlegroups.com</code></li>
-<li>The Web interface: <a href="http://groups.google.com/group/qubes-devel">​http://groups.google.com/group/qubes-devel</a></li>
-</ul>
-<p>To post to a group you don't need to subscribe, just send a message to the group's email address.</p>
-<p>You can subscribe either through the web interface (but then you need to create a google account), or by sending an empty message to:</p>
-<pre class="wiki"><code>qubes-devel+subscribe@googlegroups.com</code></pre>
 <h3 id="Presscontact">Press contact</h3>
 <ul>
 <li>Joanna Rutkowska <code>joanna at invisiblethingslab dot com</code></li>
