--- a/WikiStart.html
+++ b/WikiStart.html
@@ -4,8 +4,7 @@
 <li><a href="#News">News</a></li>
 <li><a href="#DownloadandInstallation">Download and Installation</a></li>
 <li><a href="#ForUsers">For Users</a></li>
-<li><a href="#ForDevelopers">For Developers</a></li>
-<li><a href="#Security">Security</a>
+<li><a href="#ForDevelopers">For Developers</a>
 <ol>
 <li><a href="#Presscontact">Press contact</a></li>
 </ol></li>
@@ -50,12 +49,6 @@
 <li><a href="/wiki/wiki/ContributingHowto">How can I contribute to the Qubes Project?</a></li>
 <li><a href="/wiki/wiki/DevelBooks">Books for Developers</a></li>
 <li><a href="/wiki/wiki/QubesResearch">Research papers related to Qubes</a></li>
-</ul>
-<h2 id="Security">Security</h2>
-<ul>
-<li><a href="/wiki/wiki/SecurityPage">Reporting Security Issues in Qubes OS</a></li>
-<li><a href="/wiki/wiki/SecurityBulletins">Qubes Security Bulletins</a></li>
-<li><a href="/wiki/wiki/SecurityGoals">Qubes Security Goals</a></li>
 </ul>
 <h3 id="Presscontact">Press contact</h3>
 <ul>
