--- a/WikiStart.html
+++ b/WikiStart.html
@@ -2,9 +2,7 @@
 <p></p>
 <ol>
 <li><a href="#News">News</a></li>
-<li><a href="#DownloadandInstallation">Download and Installation</a></li>
-<li><a href="#ForUsers">For Users</a></li>
-<li><a href="#ForDevelopers">For Developers</a>
+<li><a href="#DownloadandInstallation">Download and Installation</a>
 <ol>
 <li><a href="#Presscontact">Press contact</a></li>
 </ol></li>
@@ -33,23 +31,6 @@
 <li><a href="/wiki/wiki/VerifyingSignatures">On digital signatures and how to verify Qubes downloads</a></li>
 </ul>
 <p></p>
-<h2 id="ForUsers">For Users</h2>
-<ul>
-<li><a href="/wiki/wiki/UserDoc">User's Guide</a></li>
-<li><a href="/wiki/wiki/UserFaq">FAQ</a></li>
-</ul>
-<h2 id="ForDevelopers">For Developers</h2>
-<ul>
-<li><a href="/wiki/wiki/SystemDoc">Qubes Developer Documentation</a></li>
-<li><a href="/wiki/wiki/IdeasIncubator">Ideas Incubator?</a></li>
-<li><a href="/wiki/wiki/SourceCode">Source Code</a></li>
-<li><a href="/wiki/wiki/DevelFaq">Developer's FAQ</a></li>
-</ul>
-<ul>
-<li><a href="/wiki/wiki/ContributingHowto">How can I contribute to the Qubes Project?</a></li>
-<li><a href="/wiki/wiki/DevelBooks">Books for Developers</a></li>
-<li><a href="/wiki/wiki/QubesResearch">Research papers related to Qubes</a></li>
-</ul>
 <h3 id="Presscontact">Press contact</h3>
 <ul>
 <li>Joanna Rutkowska <code>joanna at invisiblethingslab dot com</code></li>
