--- a/QubesLists.html
+++ b/QubesLists.html
@@ -1,5 +1,5 @@
 <h1 id="QubesMailingLists">Qubes Mailing Lists</h1>
-<p><em>Note: Please send all the questions regarding Qubes to the mailing list (see below)</em></p>
+<p>Please send all the questions regarding Qubes to the mailing list:</p>
 <ul>
 <li>The group's email address: <code>qubes-devel@googlegroups.com</code></li>
 <li>The Web interface: <a href="http://groups.google.com/group/qubes-devel">​http://groups.google.com/group/qubes-devel</a></li>
