--- a/QubesContacts.html
+++ b/QubesContacts.html
@@ -1,5 +1,5 @@
-<h1 id="ContactingtheQubesTeam">Contacting the Qubes Team</h1>
-<p><strong>Note:</strong> Please send all the questions regarding Qubes to the <a href="/wiki/wiki/QubesLists">mailing list</a>.</p>
+<h1 id="ContactingtheQubesOSTeam">Contacting the Qubes OS Team</h1>
+<p><strong>Note:</strong> Please send all the questions regarding Qubes to the <a href="/wiki/wiki/QubesLists">mailing list</a>. This way, your questions, as well as answers to those questions, could be also shared with other users.</p>
 <h2 id="Pressbusinesscontact">Press &amp; business contact</h2>
 <ul>
 <li>Joanna Rutkowska <code>joanna at invisiblethingslab dot com</code></li>
