--- a/QubesSecurity.html
+++ b/QubesSecurity.html
@@ -5,3 +5,6 @@
 <li><a href="/wiki/wiki/SecurityGoals">Qubes Security Goals</a></li>
 <li><a href="/wiki/wiki/VerifyingSignatures">On digital signatures and how to verify Qubes keys and downloads</a></li>
 </ul>
+<ul>
+<li><a href="http://keys.qubes-os.org/keys/">​Qubes Keys</a></li>
+</ul>
