--- a/WikiStart.html
+++ b/WikiStart.html
@@ -1,4 +1,4 @@
-<p><a href="http://files.qubes-os.org/Architecture_files/droppedImage.png"><img src="http://files.qubes-os.org/Architecture_files/droppedImage.png" title="http://files.qubes-os.org/Architecture_files/droppedImage.png" alt="http://files.qubes-os.org/Architecture_files/droppedImage.png" /></a></p>
+<p><a href="/wiki/wiki/QubesArchitecture"><img src="http://files.qubes-os.org/Architecture_files/droppedImage.png" title="http://files.qubes-os.org/Architecture_files/droppedImage.png" alt="http://files.qubes-os.org/Architecture_files/droppedImage.png" /></a></p>
 <h1 id="WelcometotheQubesOSProject">Welcome to the Qubes OS Project</h1>
 <p>Qubes is an open source operating system designed to provide strong security for desktop computing. Qubes is based on Xen, X Window System, and Linux, and can run most Linux applications and utilize most of the Linux drivers. Qubes <strong>Release 1</strong> has been released in September 2012. Qubes <strong>Release 2</strong> is currently in the works, and the Beta 1 is scheduled to be released in the coming weeks. Qubes 2 will also support Windows-based AppVMs.</p>
 <ul>
