--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -1,6 +1,14 @@
 <h1 id="QubesDownloads">Qubes Downloads</h1>
 <ul>
+<li><a href="/wiki/wiki/VerifyingSignatures">On digital signatures and how to verify Qubes downloads</a></li>
+</ul>
+<h2 id="QubesRelease2Beta1">Qubes Release 2 Beta 1</h2>
+<ul>
+<li><a href="/wiki/wiki/HCLR2">Hardware Compatibility List?</a></li>
+<li><a href="/wiki/wiki/InstallationGuideR2">ISO Download and Installation Guide</a></li>
+</ul>
+<h2 id="QubesRelease1">Qubes Release 1</h2>
+<ul>
 <li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
 <li><a href="/wiki/wiki/InstallationGuide">ISO Download and Installation Guide</a></li>
-<li><a href="/wiki/wiki/VerifyingSignatures">On digital signatures and how to verify Qubes downloads</a></li>
 </ul>
