--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -4,11 +4,24 @@
 </ul>
 <h2 id="QubesRelease2Beta1">Qubes Release 2 Beta 1</h2>
 <ul>
+<li>Coming soon...</li>
+</ul>
+<ul>
 <li><a href="/wiki/wiki/HCLR2">Hardware Compatibility List?</a></li>
 <li><a href="/wiki/wiki/InstallationGuideR2">ISO Download and Installation Guide</a></li>
 </ul>
 <h2 id="QubesRelease1">Qubes Release 1</h2>
 <ul>
+<li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R1-x86_64-DVD.iso/download">​Qubes-R1-x86_64-DVD.iso</a> (via sourceforge.net)</li>
+<li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R1-x86_64-DVD.iso.asc/download">​Digital Signature</a> (via sourceforge.net)</li>
+</ul>
+<ul>
 <li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
 <li><a href="/wiki/wiki/InstallationGuide">ISO Download and Installation Guide</a></li>
+</ul>
+<h2 id="Mirrors">Mirrors</h2>
+<p>Qubes ISOs are also available from the following mirrors:</p>
+<ul>
+<li><a href="http://ftp.fsn.hu/pub/linux/distributions/qubes/">​http://ftp.fsn.hu/pub/linux/distributions/qubes/</a></li>
+<li><a href="http://linuxtracker.org/index.php?page=torrent-details&amp;id=3bdf893771d63bdbe3d83f31e064360ee10f30ec">​http://linuxtracker.org/index.php?page=torrent-details&amp;id=3bdf893771d63bdbe3d83f31e064360ee10f30ec</a></li>
 </ul>
