--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -2,9 +2,9 @@
 <ul>
 <li><a href="/wiki/wiki/VerifyingSignatures">On digital signatures and how to verify Qubes downloads</a></li>
 </ul>
-<h2 id="QubesRelease2Beta1">Qubes Release 2 Beta 1</h2>
+<h2 id="QubesRelease2">Qubes Release 2</h2>
 <ul>
-<li>Coming soon...</li>
+<li>Qubes R2 Beta 1 coming soon...</li>
 </ul>
 <ul>
 <li><a href="/wiki/wiki/HCLR2">Hardware Compatibility List?</a></li>
