--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -1,18 +1,21 @@
-<h1 id="InstallationGuideforQubes1.0">Installation Guide (for Qubes 1.0)</h1>
+<h1 id="InstallationGuideforQubesRelease1">Installation Guide (for Qubes Release 1)</h1>
+<p></p>
+<ol>
+<li><a href="#HardwareRequirements">Hardware Requirements</a></li>
+<li><a href="#DownloadinstallerISO">Download installer ISO</a></li>
+<li><a href="#BurningtheISOontoaDVDorUSBstick">Burning the ISO onto a DVD or USB stick</a></li>
+<li><a href="#UpgradingfromQubes1.0-rc1">Upgrading from Qubes 1.0-rc1</a></li>
+<li><a href="#MigratingfromQubesBeta3">Migrating from Qubes Beta 3</a></li>
+<li><a href="#InstallingUpdates">Installing Updates</a></li>
+<li><a href="#KnownIssues">Known Issues</a></li>
+<li><a href="#GettingHelp">Getting Help</a></li>
+</ol>
+<p></p>
 <h2 id="HardwareRequirements">Hardware Requirements</h2>
 <p>Please see the <a href="/wiki/wiki/HCL">Hardware Compatibility List</a> page for more information on required and recommended hardware.</p>
 <p>Note: We don't recommend installing Qubes in a virtual machine! It will likely not work. Don't send emails asking about it.</p>
 <h2 id="DownloadinstallerISO">Download installer ISO</h2>
-<p>You can download the ISO and the digital signature from the SF.net:</p>
-<ul>
-<li><a href="https://sourceforge.net/projects/qubesos/files/">​https://sourceforge.net/projects/qubesos/files/</a></li>
-</ul>
-<p>... or you might try one of the following mirrors:</p>
-<ul>
-<li><a href="http://ftp.fsn.hu/pub/linux/distributions/qubes/">​http://ftp.fsn.hu/pub/linux/distributions/qubes/</a></li>
-<li><a href="http://linuxtracker.org/index.php?page=torrent-details&amp;id=3bdf893771d63bdbe3d83f31e064360ee10f30ec">​http://linuxtracker.org/index.php?page=torrent-details&amp;id=3bdf893771d63bdbe3d83f31e064360ee10f30ec</a> (torrent)</li>
-</ul>
-<p>Remember, we have absolutely no control over those servers, and so you should be assuming that they might be compromised, or just be serving a compromised ISOs because their operators decided so for whatever reason. Always verify the digital signature on the downloaded ISO. See this <a href="/wiki/wiki/VerifyingSignatures">page</a> for more info about how to download and verify our GPG keys, and then verify the downloaded ISO:</p>
+<p>See <a href="/wiki/wiki/QubesDownloads">this page</a> for ISO downloads. Remember, we have absolutely no control over those servers, and so you should be assuming that they might be compromised, or just be serving a compromised ISOs because their operators decided so for whatever reason. Always verify the digital signature on the downloaded ISO. See this <a href="/wiki/wiki/VerifyingSignatures">page</a> for more info about how to download and verify our GPG keys, and then verify the downloaded ISO:</p>
 <pre class="wiki"><code>gpg -v &lt;iso&gt;.asc</code></pre>
 <h2 id="BurningtheISOontoaDVDorUSBstick">Burning the ISO onto a DVD or USB stick</h2>
 <p>Once you verify this is an authentic ISO, you should burn it on a DVD.</p>
