--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -28,7 +28,7 @@
 <h2 id="UpgradingfromQubes1.0-rc1">Upgrading from Qubes 1.0-rc1</h2>
 <p>If you're already running Qubes 1.0-rc1, you don't need to reinstall, it's just enough to update the packages in your Dom0 and the template VM(s). The easiest way for doing this is to click on the Update Button in the Qubes Manger -- one click when you selected Dom0, and one click for each of your template VM (by default there is just one template).</p>
 <h2 id="MigratingfromQubesBeta3">Migrating from Qubes Beta 3</h2>
-<p>If you have Qubes Beta 3 currently installed on your system, you must reinstall from scratch, as we offer no direct upgrade option in the installer (sorry). However, we do offer tools for smooth migration of your AppVMs. In order to do that, please backup your AppVMs using the <code></code><code>qvm-backup</code><code></code> tool <a href="/wiki/wiki/BackupRestore">as usual</a>. Then, after you install Qubes 1.0 rc1, you can restore them using <code></code><code>qvm-backup-restore</code><code></code> tool. However, because we have changed the default template in RC1, you should tell qvm-back-restore about that by passing <code></code><code>--replace-template</code><code></code> option:</p>
+<p>If you have Qubes Beta 3 currently installed on your system, you must reinstall from scratch, as we offer no direct upgrade option in the installer (sorry). However, we do offer tools for smooth migration of your AppVMs. In order to do that, please backup your AppVMs using the <code>qvm-backup</code> tool <a href="/wiki/wiki/BackupRestore">as usual</a>. Then, after you install Qubes 1.0 rc1, you can restore them using <code>qvm-backup-restore</code> tool. However, because we have changed the default template in RC1, you should tell qvm-back-restore about that by passing <code>--replace-template</code> option:</p>
 <pre class="wiki"><code>qvm-backup-restore &lt;backup_dir&gt; --replace-template=fedora-15-x64:fedora-17-x64 </code></pre>
 <h2 id="InstallingUpdates">Installing Updates</h2>
 <p>Installing updates is very easy and can be done using the &quot;Update&quot; button in the Qubes Manager. Alternatively it can also be done from command prompt -- see the following for more details:</p>
@@ -44,7 +44,7 @@
 <li>If you don't enable Composition (System Setting -&gt; Desktop -&gt; Enable desktop effects), which you really should do, then the KDE task bar might get somehow ugly (e.g. half of it might be black). This is some KDE bug that we don't plan to fix.</li>
 </ul>
 <ul>
-<li>Some keyboard layout set by KDE System Settings can cause <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/77d076b65dda7226">​keyboard not working at all</a>. If you hit this issue, you can switch to console (by console login option) and manually edit <code></code>/etc/X11/xorg.conf.d/00-system-setup-keyboard.conf<code></code> (and <code></code>/etc/sysconfig/keyboard<code></code>) and place correct keyboard layout settings (details in linked thread). You can check if specific keyboard layout settings are proper using <code></code>setxkbmap<code></code> tool.</li>
+<li>Some keyboard layout set by KDE System Settings can cause <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/77d076b65dda7226">​keyboard not working at all</a>. If you hit this issue, you can switch to console (by console login option) and manually edit <code>/etc/X11/xorg.conf.d/00-system-setup-keyboard.conf</code> (and <code>/etc/sysconfig/keyboard</code>) and place correct keyboard layout settings (details in linked thread). You can check if specific keyboard layout settings are proper using <code>setxkbmap</code> tool.</li>
 </ul>
 <ul>
 <li><p>On systems with more than 8GB of RAM there is problem with Disposable VM. To fix it, limit maximum memory allocation for DispVM to 3GB</p>
@@ -65,6 +65,6 @@ qvm-create-default-dvm --default-template --default-script</code></pre></li>
 <li>If you don't find answer in the sources given above, write to the <em>qubes-devel</em> mailing list:
 <ul>
 <li><a href="http://groups.google.com/group/qubes-devel">​http://groups.google.com/group/qubes-devel</a></li>
-<li><code></code><code>qubes-devel@googlegroups.com</code><code></code></li>
+<li><code>qubes-devel@googlegroups.com</code></li>
 </ul></li>
 </ul>
