--- a/UserDoc/DispVMCustomization.html
+++ b/UserDoc/DispVMCustomization.html
@@ -5,7 +5,7 @@
 <pre class="wiki"><code>qvm-run -a fedora-17-x64-dvm gnome-terminal</code></pre></li>
 <li>Change application settings (eg you can start firefox and change default search engine, install some plugins etc).</li>
 <li><p>Create empty /home/user/.qubes-dispvm-customized file:</p>
-<pre class="wiki"><code>touch /home/user/.qubes-dispvm-customized file</code></pre></li>
+<pre class="wiki"><code>touch /home/user/.qubes-dispvm-customized</code></pre></li>
 <li>Shutdown the VM (either by poweroff from VM terminal, or qvm-shutdown from dom0 terminal).</li>
 <li><p>Regenerate DispVM template:</p>
 <pre class="wiki"><code>qvm-create-default-dvm --default-template --default-script</code></pre></li>
