--- a/HCL.html
+++ b/HCL.html
@@ -29,6 +29,9 @@
 <ul>
 <li>Sony Vaio Z 12 (2010 edition) -- works well, but some <a href="/wiki/wiki/SonyVaioTinkering">tinkering required</a></li>
 </ul>
+<ul>
+<li>Dell Latitude E6420 w/ Intel graphics (Sandy Bridge), i5-2520M CPU - works well on 3.4.18 (haven't tested default 3.2.30 kernel)</li>
+</ul>
 <h2 id="SpecificsystemsknowntoworktestedbytheQubescommunity">Specific systems known to work tested by the Qubes community</h2>
 <ul>
 <li>Fujitsu S751 seems to work well, but requires BIOS update to get VT-d working. Reported by <a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubecz Laszlo</a>.</li>
