--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -48,3 +48,7 @@
 <ul>
 <li><a href="/wiki/wiki/InstallationIsoBuilding">How to build Qubes installation ISO</a></li>
 </ul>
+<p></p>
+<ul>
+<li><a href="/wiki/wiki/USBVM">Building USB passthrough support (experimental)</a></li>
+</ul>
