--- a/USBVM.html
+++ b/USBVM.html
@@ -1,4 +1,5 @@
 <h2 id="USBPassthrough:USBVM">USB Pass through: USBVM</h2>
+<p><strong>WARNING:</strong> This is experimental and very broken.</p>
 <p>Source: <a href="https://groups.google.com/d/msg/qubes-devel/4AKulABh2Jc/_R7SRSC4peYJ">​https://groups.google.com/d/msg/qubes-devel/4AKulABh2Jc/_R7SRSC4peYJ</a></p>
 <p>You'll need the patch tagged abb_e58b432 from <a href="git://github.com/grwl/qubes-core.git">​git://github.com/grwl/qubes-core.git</a>.</p>
 <p>The rest is in RPMs, yes. I roughly follow this procedure to have pvusb on Qubes 1.0:</p>
